# bnb_knapsack

./: bnb.cabal
app/: Main.hs
src/: BranchAndBound.hs  Dataset.hs  Lib.hs
test/: BranchAndBoundSpec.hs
test_data/: 1000.knp  8.knp  file.knp
