name:                bnb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alx741/bnb#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Campoverde [alx741]
maintainer:          alx741@riseup.net
copyright:           2017 Daniel Campoverde [alx741]
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Dataset
                     , BranchAndBound
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 5.2
                     , vector
                     , time
  default-language:    Haskell2010

executable bnb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bnb
                     , time
                     , process
  default-language:    Haskell2010

test-suite bnb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bnb
                     , vector >= 0.11 && < 0.12
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alx741/bnb
